# dvc_example

./: pyproject.toml
.dvc/: config
data/initial_data/: initial_data.csv.dvc
data/prepared_data/: prepared_data.csv
dvclive/: metrics.json
dvclive/plots/metrics/: test_MSE.tsv  train_MSE.tsv  validation_MSE.tsv
models/: linear_model.pickle.dvc
src/configs/: config.yaml
src/data/: data_download.py  data_prepare.py
src/stages/: data_prepare.py  download.py  train_model.py
