[project]
name = "dvc-example"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan Kostin",email = "tervehterveh@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dvc (>=3.59.2,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "dvc_example", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
